# Hiver-Challenge-Email-Suggested-Response-System.

./: .env.example  .gitignore  README.md  app.py  evaluate.py  pyproject.toml
scripts/: generate_dataset.py
src/: classifier.py  cli.py  dataset.py  debate_generator.py  evaluator.py  generator.py  logger.py  moa_generator.py  scrubber.py
tests/: test_metrics.py  test_security_hardening.py
