[project]
name = "hiver-email-reply"
version = "0.1.0"
description = "AI email suggested-response system with RAG generation and multi-metric evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
    "rouge-score>=0.1.2",
    "click>=8.1.7",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "scipy>=1.13.0",
    "tiktoken>=0.7.0",
    "tqdm>=4.66.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "streamlit>=1.59.0",
    "plotly>=6.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
email-reply = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
